--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <i class="ri-mic-ai-line"></i> VoiceScribe
             </div>
             <div class="nav-right">
+                <div class="theme-toggle" id="theme-toggle" title="Cambiar tema">
+                    <i class="ri-moon-line"></i>
+                </div>
                 <div class="lang-switcher">
                     <button class="lang-btn active" data-lang="es" title="Español">🇪🇸</button>
                     <button class="lang-btn" data-lang="en" title="English">🇺🇸</button>
