feat: Remove automatic dark mode detection to default to light theme and improve theme toggle semantics.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <i class="ri-mic-ai-line"></i> VoiceScribe
             </div>
             <div class="nav-right">
-                <div class="theme-toggle" id="theme-toggle" title="Switch theme">
+                <button class="theme-toggle" id="theme-toggle" title="Switch theme" type="button">
                     <i class="ri-moon-line"></i>
-                </div>
+                </button>
                 <div class="lang-switcher">
                     <button class="lang-btn" data-lang="es" title="Español">🇪🇸</button>
                     <button class="lang-btn active" data-lang="en" title="English">🇺🇸</button>
@@ -230,7 +230,8 @@
                     </button>
                     <div class="faq-answer">
                         <p data-i18n-html="faq.a2">We use the same technology as Google (Web Speech API), achieving over
-                            <strong>95% accuracy</strong> in normal conditions.</p>
+                            <strong>95% accuracy</strong> in normal conditions.
+                        </p>
                     </div>
                 </div>
                 <!-- Item 3 -->
