--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.4.1"></script>
 </body>
 
 </html>
